--- a/openmall-api/pom.xml
+++ b/openmall-api/pom.xml
@@ -17,29 +17,14 @@
     </properties>
 
     <dependencies>
-        <!-- spring -->
+        <!-- openmall -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-logging</artifactId>
-                </exclusion>
-            </exclusions>
+            <groupId>com.sciatta.openmall</groupId>
+            <artifactId>openmall-common</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <!-- 打war包移除内置tomcat -->
-            <!--
-            <exclusions>
-                <exclusion>
-                    <artifactId>spring-boot-starter-tomcat</artifactId>
-                    <groupId>org.springframework.boot</groupId>
-                </exclusion>
-            </exclusions>
-            -->
+            <groupId>com.sciatta.openmall</groupId>
+            <artifactId>openmall-service</artifactId>
         </dependency>
     </dependencies>
 
