--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <commons-io.version>1.3.2</commons-io.version>
         <mybatis-generator.version>1.4.0</mybatis-generator.version>
         <mapstruct.version>1.2.0.Final</mapstruct.version>
+        <idworker-client.version>1.5</idworker-client.version>
     </properties>
 
     <dependencyManagement>
@@ -122,6 +123,12 @@
                 <artifactId>mapstruct-processor</artifactId>
                 <version>${mapstruct.version}</version>
             </dependency>
+            <!-- idworker -->
+            <dependency>
+                <groupId>com.github.bingoohuang</groupId>
+                <artifactId>idworker-client</artifactId>
+                <version>${idworker-client.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -198,6 +205,11 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
+        </dependency>
+        <!-- idworker -->
+        <dependency>
+            <groupId>com.github.bingoohuang</groupId>
+            <artifactId>idworker-client</artifactId>
         </dependency>
     </dependencies>
 
