feat: Add carousel showing for index and loading root level category, which lazy load subCategories for index

--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,11 @@
             <groupId>com.github.bingoohuang</groupId>
             <artifactId>idworker-client</artifactId>
         </dependency>
+        <!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
