--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,11 @@
             </exclusions>
             -->
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
         <!-- slf4j -->
         <dependency>
             <groupId>org.slf4j</groupId>
