--- a/openmall-api/src/main/resources/application-test.yml
+++ b/openmall-api/src/main/resources/application-test.yml
@@ -9,9 +9,9 @@ spring:
 
 mybatis:
   configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl # 生产环境不需要打印
 
 openmall:
   upload:
-    image-user-face-location: /Users/yangxiaoyu/work/test/openmall/images/faces
-    image-server-url: http://localhost:8088/faces
+    image-user-face-location: /openmall/images/faces
+    image-server-url: http://192.168.1.20:8088/openmall-api/faces
