--- a/openmall-api/src/main/resources/application-test.yml
+++ b/openmall-api/src/main/resources/application-test.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://192.168.1.10:3306/openmall?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
+    url: jdbc:mysql://node10:3306/openmall?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
     username: root
     password: root
 
@@ -14,4 +14,4 @@ mybatis:
 openmall:
   upload:
     image-user-face-location: /openmall/images/faces
-    image-server-url: http://192.168.1.20:8088/openmall-api/faces
+    image-server-url: http://node20:8088/faces
