--- a/openmall-api/src/main/resources/application-dev.yml
+++ b/openmall-api/src/main/resources/application-dev.yml
@@ -3,22 +3,21 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://node10:3306/openmall?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
+    url: jdbc:mysql://node100:3306/openmall?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
     username: root
     password: root
   redis:
-    cluster:
-      nodes: 192.168.1.10:6379,192.168.1.11:6379,192.168.1.12:6379,192.168.1.20:6379,192.168.1.21:6379,192.168.1.22:6379
-    database: 0
+    host: node100
     password: openmall
+    database: 0
+    port: 6379
 
 mybatis:
   configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl  # 生产环境不需要打印
 
 openmall:
   log:
-    file-path: /Users/yangxiaoyu/work/test/openmall/api/logs
     level: debug
   upload:
     image-user-face-location: /Users/yangxiaoyu/work/test/openmall/images/faces
