--- a/openmall-dao/src/main/resources/generator/generator.properties
+++ b/openmall-dao/src/main/resources/generator/generator.properties
@@ -1,4 +1,4 @@
 jdbc.driverClass=com.mysql.cj.jdbc.Driver
-jdbc.connectionURL=jdbc:mysql://172.72.0.10:3306/openmall?useUnicode=true&characterEncoding=utf-8&autoReconnect=true
+jdbc.connectionURL=jdbc:mysql://node100:3306/openmall?useUnicode=true&characterEncoding=utf-8&autoReconnect=true
 jdbc.userId=root
 jdbc.password=root
