--- a/openmall-api/src/main/resources/application.yml
+++ b/openmall-api/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
       max-request-size: 512000  # 请求大小限制为500kb
 
 mybatis:
-  type-aliases-package: com.sciatta.openmall.dao.pojo.po          # 所有POJO类所在包路径
+  type-aliases-package: com.sciatta.openmall.dao.pojo.po.ext          # 所有POJO类所在包路径
   mapper-locations: classpath*:mapper/**/*.xml                        # mapper映射文件
 
 pagehelper: # 分页插件配置
