--- a/openmall-api/pom.xml
+++ b/openmall-api/pom.xml
@@ -27,6 +27,16 @@
             <groupId>com.sciatta.openmall</groupId>
             <artifactId>openmall-service</artifactId>
         </dependency>
+        <!-- spring -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <!-- hibernate-validator -->
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
