--- a/openmall-service/pom.xml
+++ b/openmall-service/pom.xml
@@ -26,6 +26,11 @@
             <groupId>com.sciatta.openmall</groupId>
             <artifactId>openmall-dao</artifactId>
         </dependency>
+        <!-- spring -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
