--- a/common/openmall-shared-pojo/pom.xml
+++ b/common/openmall-shared-pojo/pom.xml
@@ -6,10 +6,11 @@
         <artifactId>openmall</artifactId>
         <groupId>com.sciatta.openmall</groupId>
         <version>${revision}</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>openmall-common</artifactId>
+    <artifactId>openmall-shared-pojo</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
