--- a/domain/openmall-search/openmall-search-pojo/pom.xml
+++ b/domain/openmall-search/openmall-search-pojo/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>openmall-search</artifactId>
         <groupId>com.sciatta.openmall</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
