--- a/domain/openmall-search/openmall-search-web/src/main/resources/application.yml
+++ b/domain/openmall-search/openmall-search-web/src/main/resources/application.yml
@@ -33,3 +33,4 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:20000/eureka/
+    registry-fetch-interval-seconds: 3  # 默认30s刷新缓存
